--- a/public/404.html
+++ b/public/404.html
@@ -15,6 +15,7 @@
       width: 15rem;
       margin-left: 4rem;
       margin-top: 8rem;
+      padding: 10px;
     }
     h1 {
       font-family: 'Rajdhani', sans-serif;
